--- a/result/2022-07-04.md
+++ b/result/2022-07-04.md
@@ -6,7 +6,7 @@
 6. [安徽泗县新增阳性病例234例](https://s.weibo.com//weibo?q=%23%E5%AE%89%E5%BE%BD%E6%B3%97%E5%8E%BF%E6%96%B0%E5%A2%9E%E9%98%B3%E6%80%A7%E7%97%85%E4%BE%8B234%E4%BE%8B%23&Refer=top) 805780
 7. [男子赶着离婚下高速强行冲卡](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E8%B5%B6%E7%9D%80%E7%A6%BB%E5%A9%9A%E4%B8%8B%E9%AB%98%E9%80%9F%E5%BC%BA%E8%A1%8C%E5%86%B2%E5%8D%A1%23&Refer=top) 684964
 8. [太胖真的很多项目玩不了](https://s.weibo.com//weibo?q=%23%E5%A4%AA%E8%83%96%E7%9C%9F%E7%9A%84%E5%BE%88%E5%A4%9A%E9%A1%B9%E7%9B%AE%E7%8E%A9%E4%B8%8D%E4%BA%86%23&Refer=top) 624926
-9. [Halo系统又立功了](https://s.weibo.com//weibo?q=%23Halo%E7%B3%BB%E7%BB%9F%E5%8F%88%E7%AB%8B%E5%8A%9F%E4%BA%86%23&Refer=top) 532395
+9. [Halo系统又立功了](https://s.weibo.com//weibo?q=%23Halo%E7%B3%BB%E7%BB%9F%E5%8F%88%E7%AB%8B%E5%8A%9F%E4%BA%86%23&Refer=top) 591270
 10. [请一定别放弃读书](https://s.weibo.com//weibo?q=%23%E8%AF%B7%E4%B8%80%E5%AE%9A%E5%88%AB%E6%94%BE%E5%BC%83%E8%AF%BB%E4%B9%A6%23&Refer=top) 521389
 11. [周冠宇 碰撞](https://s.weibo.com//weibo?q=%E5%91%A8%E5%86%A0%E5%AE%87%20%E7%A2%B0%E6%92%9E&Refer=top) 499142
 12. [供我上大学的弟弟](https://s.weibo.com//weibo?q=%23%E4%BE%9B%E6%88%91%E4%B8%8A%E5%A4%A7%E5%AD%A6%E7%9A%84%E5%BC%9F%E5%BC%9F%23&Refer=top) 442640
@@ -19,24 +19,24 @@
 19. [章泽天巴黎晚宴近照](https://s.weibo.com//weibo?q=%23%E7%AB%A0%E6%B3%BD%E5%A4%A9%E5%B7%B4%E9%BB%8E%E6%99%9A%E5%AE%B4%E8%BF%91%E7%85%A7%23&Refer=top) 357498
 20. [倪匡去世](https://s.weibo.com//weibo?q=%23%E5%80%AA%E5%8C%A1%E5%8E%BB%E4%B8%96%23&Refer=top) 357471
 21. [小学生捡1万现金倔强抱钱等警察](https://s.weibo.com//weibo?q=%23%E5%B0%8F%E5%AD%A6%E7%94%9F%E6%8D%A11%E4%B8%87%E7%8E%B0%E9%87%91%E5%80%94%E5%BC%BA%E6%8A%B1%E9%92%B1%E7%AD%89%E8%AD%A6%E5%AF%9F%23&Refer=top) 357402
-22. [作曲家回应PDD唱歌被索赔](https://s.weibo.com//weibo?q=%23%E4%BD%9C%E6%9B%B2%E5%AE%B6%E5%9B%9E%E5%BA%94PDD%E5%94%B1%E6%AD%8C%E8%A2%AB%E7%B4%A2%E8%B5%94%23&Refer=top) 322566
-23. [感谢halo](https://s.weibo.com//weibo?q=%23%E6%84%9F%E8%B0%A2halo%23&Refer=top) 313717
-24. [河北无疫情地区原则上不开展每周全员核酸](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8C%97%E6%97%A0%E7%96%AB%E6%83%85%E5%9C%B0%E5%8C%BA%E5%8E%9F%E5%88%99%E4%B8%8A%E4%B8%8D%E5%BC%80%E5%B1%95%E6%AF%8F%E5%91%A8%E5%85%A8%E5%91%98%E6%A0%B8%E9%85%B8%23&Refer=top) 293719
-25. [你只需要带着录取通知书去学校](https://s.weibo.com//weibo?q=%23%E4%BD%A0%E5%8F%AA%E9%9C%80%E8%A6%81%E5%B8%A6%E7%9D%80%E5%BD%95%E5%8F%96%E9%80%9A%E7%9F%A5%E4%B9%A6%E5%8E%BB%E5%AD%A6%E6%A0%A1%23&Refer=top) 280776
-26. [香港四大才子只剩下蔡澜](https://s.weibo.com//weibo?q=%23%E9%A6%99%E6%B8%AF%E5%9B%9B%E5%A4%A7%E6%89%8D%E5%AD%90%E5%8F%AA%E5%89%A9%E4%B8%8B%E8%94%A1%E6%BE%9C%23&Refer=top) 274965
-27. [跟着张艺兴的脚步解锁长沙](https://s.weibo.com//weibo?q=%E8%B7%9F%E7%9D%80%E5%BC%A0%E8%89%BA%E5%85%B4%E7%9A%84%E8%84%9A%E6%AD%A5%E8%A7%A3%E9%94%81%E9%95%BF%E6%B2%99&Refer=top) 250875
-28. [坦然的老夫子](https://s.weibo.com//weibo?q=%23%E5%9D%A6%E7%84%B6%E7%9A%84%E8%80%81%E5%A4%AB%E5%AD%90%23&Refer=top) 241336
-29. [女孩为报恩66万买房车带养父旅游](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%A9%E4%B8%BA%E6%8A%A5%E6%81%A966%E4%B8%87%E4%B9%B0%E6%88%BF%E8%BD%A6%E5%B8%A6%E5%85%BB%E7%88%B6%E6%97%85%E6%B8%B8%23&Refer=top) 237930
+22. [河北无疫情地区原则上不开展每周全员核酸](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8C%97%E6%97%A0%E7%96%AB%E6%83%85%E5%9C%B0%E5%8C%BA%E5%8E%9F%E5%88%99%E4%B8%8A%E4%B8%8D%E5%BC%80%E5%B1%95%E6%AF%8F%E5%91%A8%E5%85%A8%E5%91%98%E6%A0%B8%E9%85%B8%23&Refer=top) 333540
+23. [作曲家回应PDD唱歌被索赔](https://s.weibo.com//weibo?q=%23%E4%BD%9C%E6%9B%B2%E5%AE%B6%E5%9B%9E%E5%BA%94PDD%E5%94%B1%E6%AD%8C%E8%A2%AB%E7%B4%A2%E8%B5%94%23&Refer=top) 322566
+24. [感谢halo](https://s.weibo.com//weibo?q=%23%E6%84%9F%E8%B0%A2halo%23&Refer=top) 313717
+25. [女孩为报恩66万买房车带养父旅游](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%A9%E4%B8%BA%E6%8A%A5%E6%81%A966%E4%B8%87%E4%B9%B0%E6%88%BF%E8%BD%A6%E5%B8%A6%E5%85%BB%E7%88%B6%E6%97%85%E6%B8%B8%23&Refer=top) 289041
+26. [你只需要带着录取通知书去学校](https://s.weibo.com//weibo?q=%23%E4%BD%A0%E5%8F%AA%E9%9C%80%E8%A6%81%E5%B8%A6%E7%9D%80%E5%BD%95%E5%8F%96%E9%80%9A%E7%9F%A5%E4%B9%A6%E5%8E%BB%E5%AD%A6%E6%A0%A1%23&Refer=top) 280776
+27. [香港四大才子只剩下蔡澜](https://s.weibo.com//weibo?q=%23%E9%A6%99%E6%B8%AF%E5%9B%9B%E5%A4%A7%E6%89%8D%E5%AD%90%E5%8F%AA%E5%89%A9%E4%B8%8B%E8%94%A1%E6%BE%9C%23&Refer=top) 274965
+28. [跟着张艺兴的脚步解锁长沙](https://s.weibo.com//weibo?q=%E8%B7%9F%E7%9D%80%E5%BC%A0%E8%89%BA%E5%85%B4%E7%9A%84%E8%84%9A%E6%AD%A5%E8%A7%A3%E9%94%81%E9%95%BF%E6%B2%99&Refer=top) 250875
+29. [坦然的老夫子](https://s.weibo.com//weibo?q=%23%E5%9D%A6%E7%84%B6%E7%9A%84%E8%80%81%E5%A4%AB%E5%AD%90%23&Refer=top) 241336
 30. [张学友声明](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E5%AD%A6%E5%8F%8B%E5%A3%B0%E6%98%8E%23&Refer=top) 229227
 31. [巨型蜂窝压塌天花板收获60斤蜂蜜](https://s.weibo.com//weibo?q=%23%E5%B7%A8%E5%9E%8B%E8%9C%82%E7%AA%9D%E5%8E%8B%E5%A1%8C%E5%A4%A9%E8%8A%B1%E6%9D%BF%E6%94%B6%E8%8E%B760%E6%96%A4%E8%9C%82%E8%9C%9C%23&Refer=top) 226520
 32. [周冠宇没事就好](https://s.weibo.com//weibo?q=%E5%91%A8%E5%86%A0%E5%AE%87%E6%B2%A1%E4%BA%8B%E5%B0%B1%E5%A5%BD&Refer=top) 215814
 33. [原来爸妈才是真正的段子手](https://s.weibo.com//weibo?q=%23%E5%8E%9F%E6%9D%A5%E7%88%B8%E5%A6%88%E6%89%8D%E6%98%AF%E7%9C%9F%E6%AD%A3%E7%9A%84%E6%AE%B5%E5%AD%90%E6%89%8B%23&Refer=top) 202255
 34. [西安或将遇连续40度高温](https://s.weibo.com//weibo?q=%23%E8%A5%BF%E5%AE%89%E6%88%96%E5%B0%86%E9%81%87%E8%BF%9E%E7%BB%AD40%E5%BA%A6%E9%AB%98%E6%B8%A9%23&Refer=top) 201739
 35. [女子烫睫毛发生燃爆火球扑面袭来](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%90%E7%83%AB%E7%9D%AB%E6%AF%9B%E5%8F%91%E7%94%9F%E7%87%83%E7%88%86%E7%81%AB%E7%90%83%E6%89%91%E9%9D%A2%E8%A2%AD%E6%9D%A5%23&Refer=top) 196666
-36. [Gala五杀](https://s.weibo.com//weibo?q=%23Gala%E4%BA%94%E6%9D%80%23&Refer=top) 165694
-37. [杜锋点评中国男篮后卫表现](https://s.weibo.com//weibo?q=%23%E6%9D%9C%E9%94%8B%E7%82%B9%E8%AF%84%E4%B8%AD%E5%9B%BD%E7%94%B7%E7%AF%AE%E5%90%8E%E5%8D%AB%E8%A1%A8%E7%8E%B0%23&Refer=top) 152765
-38. [杜锋](https://s.weibo.com//weibo?q=%E6%9D%9C%E9%94%8B&Refer=top) 152314
-39. [泗县疫情还会扩大吗](https://s.weibo.com//weibo?q=%23%E6%B3%97%E5%8E%BF%E7%96%AB%E6%83%85%E8%BF%98%E4%BC%9A%E6%89%A9%E5%A4%A7%E5%90%97%23&Refer=top) 149672
+36. [泗县疫情还会扩大吗](https://s.weibo.com//weibo?q=%23%E6%B3%97%E5%8E%BF%E7%96%AB%E6%83%85%E8%BF%98%E4%BC%9A%E6%89%A9%E5%A4%A7%E5%90%97%23&Refer=top) 169343
+37. [Gala五杀](https://s.weibo.com//weibo?q=%23Gala%E4%BA%94%E6%9D%80%23&Refer=top) 165694
+38. [杜锋点评中国男篮后卫表现](https://s.weibo.com//weibo?q=%23%E6%9D%9C%E9%94%8B%E7%82%B9%E8%AF%84%E4%B8%AD%E5%9B%BD%E7%94%B7%E7%AF%AE%E5%90%8E%E5%8D%AB%E8%A1%A8%E7%8E%B0%23&Refer=top) 152765
+39. [杜锋](https://s.weibo.com//weibo?q=%E6%9D%9C%E9%94%8B&Refer=top) 152314
 40. [为什么说人是一瞬间长大的](https://s.weibo.com//weibo?q=%23%E4%B8%BA%E4%BB%80%E4%B9%88%E8%AF%B4%E4%BA%BA%E6%98%AF%E4%B8%80%E7%9E%AC%E9%97%B4%E9%95%BF%E5%A4%A7%E7%9A%84%23&Refer=top) 144612
 41. [如何评价郭艾伦对澳大利亚的表现](https://s.weibo.com//weibo?q=%23%E5%A6%82%E4%BD%95%E8%AF%84%E4%BB%B7%E9%83%AD%E8%89%BE%E4%BC%A6%E5%AF%B9%E6%BE%B3%E5%A4%A7%E5%88%A9%E4%BA%9A%E7%9A%84%E8%A1%A8%E7%8E%B0%23&Refer=top) 141512
 42. [上海新增1地为高风险](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E6%96%B0%E5%A2%9E1%E5%9C%B0%E4%B8%BA%E9%AB%98%E9%A3%8E%E9%99%A9%23&Refer=top) 138147
@@ -49,5 +49,6 @@
 49. [刘畊宏直播](https://s.weibo.com//weibo?q=%E5%88%98%E7%95%8A%E5%AE%8F%E7%9B%B4%E6%92%AD&Refer=top) 38148
 50. [F1 吓人](https://s.weibo.com//weibo?q=F1%20%E5%90%93%E4%BA%BA&Refer=top) 34450
 51. [周慧敏曾谈和倪匡的相处](https://s.weibo.com//weibo?q=%23%E5%91%A8%E6%85%A7%E6%95%8F%E6%9B%BE%E8%B0%88%E5%92%8C%E5%80%AA%E5%8C%A1%E7%9A%84%E7%9B%B8%E5%A4%84%23&Refer=top) 30398
-52. [00后女枪王暑假在家当起军训教官](https://s.weibo.com//weibo?q=%2300%E5%90%8E%E5%A5%B3%E6%9E%AA%E7%8E%8B%E6%9A%91%E5%81%87%E5%9C%A8%E5%AE%B6%E5%BD%93%E8%B5%B7%E5%86%9B%E8%AE%AD%E6%95%99%E5%AE%98%23&Refer=top) 9694
-53. [边防官兵在恶劣天气中收国旗](https://s.weibo.com//weibo?q=%23%E8%BE%B9%E9%98%B2%E5%AE%98%E5%85%B5%E5%9C%A8%E6%81%B6%E5%8A%A3%E5%A4%A9%E6%B0%94%E4%B8%AD%E6%94%B6%E5%9B%BD%E6%97%97%23&Refer=top) 8513
+52. [2022下半年最期待定档的新片](https://s.weibo.com//weibo?q=%232022%E4%B8%8B%E5%8D%8A%E5%B9%B4%E6%9C%80%E6%9C%9F%E5%BE%85%E5%AE%9A%E6%A1%A3%E7%9A%84%E6%96%B0%E7%89%87%23&Refer=top) 29506
+53. [00后女枪王暑假在家当起军训教官](https://s.weibo.com//weibo?q=%2300%E5%90%8E%E5%A5%B3%E6%9E%AA%E7%8E%8B%E6%9A%91%E5%81%87%E5%9C%A8%E5%AE%B6%E5%BD%93%E8%B5%B7%E5%86%9B%E8%AE%AD%E6%95%99%E5%AE%98%23&Refer=top) 9694
+54. [边防官兵在恶劣天气中收国旗](https://s.weibo.com//weibo?q=%23%E8%BE%B9%E9%98%B2%E5%AE%98%E5%85%B5%E5%9C%A8%E6%81%B6%E5%8A%A3%E5%A4%A9%E6%B0%94%E4%B8%AD%E6%94%B6%E5%9B%BD%E6%97%97%23&Refer=top) 8513
